--- a/examples/grafana/index.html
+++ b/examples/grafana/index.html
@@ -52,7 +52,7 @@
   </g>
 </svg></span></a>
     
-    <a class="icon-link svg-link" href="https://github.com/typelevel/otel4s"><span class="github" title="Source Code"><svg class="svg-icon" width="100%" height="100%" viewBox="0 0 100 100" version="1.1" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
+    <a class="icon-link svg-link" href="https://github.com/jatcwang/otel4s"><span class="github" title="Source Code"><svg class="svg-icon" width="100%" height="100%" viewBox="0 0 100 100" version="1.1" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
   <g class="svg-shape">
     <path d="M49.995,1c-27.609,-0 -49.995,22.386 -49.995,50.002c-0,22.09 14.325,40.83 34.194,47.444c2.501,0.458 3.413,-1.086 3.413,-2.412c0,-1.185 -0.043,-4.331 -0.067,-8.503c-13.908,3.021 -16.843,-6.704 -16.843,-6.704c-2.274,-5.773 -5.552,-7.311 -5.552,-7.311c-4.54,-3.103 0.344,-3.042 0.344,-3.042c5.018,0.356 7.658,5.154 7.658,5.154c4.46,7.64 11.704,5.433 14.552,4.156c0.454,-3.232 1.744,-5.436 3.174,-6.685c-11.102,-1.262 -22.775,-5.553 -22.775,-24.713c-0,-5.457 1.949,-9.92 5.147,-13.416c-0.516,-1.265 -2.231,-6.348 0.488,-13.233c0,0 4.199,-1.344 13.751,5.126c3.988,-1.108 8.266,-1.663 12.518,-1.682c4.245,0.019 8.523,0.574 12.517,1.682c9.546,-6.47 13.736,-5.126 13.736,-5.126c2.728,6.885 1.013,11.968 0.497,13.233c3.204,3.496 5.141,7.959 5.141,13.416c0,19.209 -11.691,23.436 -22.83,24.673c1.795,1.544 3.394,4.595 3.394,9.26c0,6.682 -0.061,12.076 -0.061,13.715c0,1.338 0.899,2.894 3.438,2.406c19.853,-6.627 34.166,-25.354 34.166,-47.438c-0,-27.616 -22.389,-50.002 -50.005,-50.002"/>
   </g>
@@ -80,7 +80,7 @@
   </g>
 </svg></span></a>
     
-    <a class="icon-link svg-link" href="https://github.com/typelevel/otel4s"><span class="github" title="Source Code"><svg class="svg-icon" width="100%" height="100%" viewBox="0 0 100 100" version="1.1" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
+    <a class="icon-link svg-link" href="https://github.com/jatcwang/otel4s"><span class="github" title="Source Code"><svg class="svg-icon" width="100%" height="100%" viewBox="0 0 100 100" version="1.1" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
   <g class="svg-shape">
     <path d="M49.995,1c-27.609,-0 -49.995,22.386 -49.995,50.002c-0,22.09 14.325,40.83 34.194,47.444c2.501,0.458 3.413,-1.086 3.413,-2.412c0,-1.185 -0.043,-4.331 -0.067,-8.503c-13.908,3.021 -16.843,-6.704 -16.843,-6.704c-2.274,-5.773 -5.552,-7.311 -5.552,-7.311c-4.54,-3.103 0.344,-3.042 0.344,-3.042c5.018,0.356 7.658,5.154 7.658,5.154c4.46,7.64 11.704,5.433 14.552,4.156c0.454,-3.232 1.744,-5.436 3.174,-6.685c-11.102,-1.262 -22.775,-5.553 -22.775,-24.713c-0,-5.457 1.949,-9.92 5.147,-13.416c-0.516,-1.265 -2.231,-6.348 0.488,-13.233c0,0 4.199,-1.344 13.751,5.126c3.988,-1.108 8.266,-1.663 12.518,-1.682c4.245,0.019 8.523,0.574 12.517,1.682c9.546,-6.47 13.736,-5.126 13.736,-5.126c2.728,6.885 1.013,11.968 0.497,13.233c3.204,3.496 5.141,7.959 5.141,13.416c0,19.209 -11.691,23.436 -22.83,24.673c1.795,1.544 3.394,4.595 3.394,9.26c0,6.682 -0.061,12.076 -0.061,13.715c0,1.338 0.899,2.894 3.438,2.406c19.853,-6.627 34.166,-25.354 34.166,-47.438c-0,-27.616 -22.389,-50.002 -50.005,-50.002"/>
   </g>
@@ -101,6 +101,8 @@
     <li class="level1 nav-leaf"><a href="../../modules-structure.html">Modules structure</a></li>
     <li class="level1 nav-leaf"><a href="../../tracing-context-propagation.html">Tracing context propagation</a></li>
     <li class="level1 nav-header">Instrumentation</li>
+    <li class="level2 nav-leaf"><a href="../../instrumentation/metrics.html">Metrics</a></li>
+    <li class="level2 nav-leaf"><a href="../../instrumentation/metrics-jvm-runtime.html">Metrics | JVM Runtime</a></li>
     <li class="level2 nav-leaf"><a href="../../instrumentation/tracing.html">Tracing</a></li>
     <li class="level2 nav-leaf"><a href="../../instrumentation/tracing-java-interop.html">Tracing - interop with Java-instrumented libraries</a></li>
     <li class="level1 nav-header">Customization</li>
@@ -157,8 +159,8 @@
             <p>Add settings to the <code>build.sbt</code>:</p>
             <pre class="keep-together pdf epub"><code class="nohighlight"><span class="identifier">libraryDependencies</span><span> ++= </span><span class="type-name">Seq</span><span>(
   </span><span class="string-literal">&quot;org.typelevel&quot;</span><span> %% </span><span class="string-literal">&quot;otel4s-oteljava&quot;</span><span> % </span><span class="string-literal">&quot;0.5.0-RC2&quot;</span><span>, </span><span class="comment">// &lt;1&gt;
-</span><span>  </span><span class="string-literal">&quot;io.opentelemetry&quot;</span><span> % </span><span class="string-literal">&quot;opentelemetry-exporter-otlp&quot;</span><span> % </span><span class="string-literal">&quot;1.36.0&quot;</span><span> % </span><span class="type-name">Runtime</span><span>, </span><span class="comment">// &lt;2&gt;
-</span><span>  </span><span class="string-literal">&quot;io.opentelemetry&quot;</span><span> % </span><span class="string-literal">&quot;opentelemetry-sdk-extension-autoconfigure&quot;</span><span> % </span><span class="string-literal">&quot;1.36.0&quot;</span><span> % </span><span class="type-name">Runtime</span><span> </span><span class="comment">// &lt;3&gt;
+</span><span>  </span><span class="string-literal">&quot;io.opentelemetry&quot;</span><span> % </span><span class="string-literal">&quot;opentelemetry-exporter-otlp&quot;</span><span> % </span><span class="string-literal">&quot;1.38.0&quot;</span><span> % </span><span class="type-name">Runtime</span><span>, </span><span class="comment">// &lt;2&gt;
+</span><span>  </span><span class="string-literal">&quot;io.opentelemetry&quot;</span><span> % </span><span class="string-literal">&quot;opentelemetry-sdk-extension-autoconfigure&quot;</span><span> % </span><span class="string-literal">&quot;1.38.0&quot;</span><span> % </span><span class="type-name">Runtime</span><span> </span><span class="comment">// &lt;3&gt;
 </span><span>)
 </span><span class="identifier">run</span><span> / </span><span class="identifier">fork</span><span> := </span><span class="boolean-literal">true</span><span>
 </span><span class="identifier">javaOptions</span><span> += </span><span class="string-literal">&quot;-Dotel.java.global-autoconfigure.enabled=true&quot;</span><span>       </span><span class="comment">// &lt;4&gt;
@@ -169,8 +171,8 @@
             <p>Add directives to the <code>grafana.scala</code>:</p>
             <pre class="keep-together pdf epub"><code class="nohighlight"><span class="comment">//&gt; using scala 3.3.0
 //&gt; using lib &quot;org.typelevel::otel4s-oteljava:0.5.0-RC2&quot; // &lt;1&gt;
-//&gt; using lib &quot;io.opentelemetry:opentelemetry-exporter-otlp:1.36.0&quot; // &lt;2&gt;
-//&gt; using lib &quot;io.opentelemetry:opentelemetry-sdk-extension-autoconfigure:1.36.0&quot; // &lt;3&gt;
+//&gt; using lib &quot;io.opentelemetry:opentelemetry-exporter-otlp:1.38.0&quot; // &lt;2&gt;
+//&gt; using lib &quot;io.opentelemetry:opentelemetry-sdk-extension-autoconfigure:1.38.0&quot; // &lt;3&gt;
 //&gt; using `java-opt` &quot;-Dotel.java.global-autoconfigure.enabled=true&quot;       // &lt;4&gt;
 //&gt; using `java-opt` &quot;-Dotel.service.name=grafana-example&quot;                 // &lt;5&gt;
 //&gt; using `java-opt` &quot;-Dotel.exporter.otlp.endpoint=http://localhost:4317&quot; // &lt;6&gt;</span></code></pre>
@@ -253,8 +255,8 @@
       </span><span class="attribute-name">http</span><span>:
 
 </span><span class="attribute-name">exporters</span><span>:
-  </span><span class="attribute-name">jaeger</span><span>: </span><span class="string-literal"># export received traces to Jaeger</span><span>
-    </span><span class="attribute-name">endpoint</span><span>: </span><span class="string-literal">jaeger:14250</span><span>
+  otlp/</span><span class="attribute-name">jaeger</span><span>: </span><span class="string-literal"># export received traces to Jaeger</span><span>
+    </span><span class="attribute-name">endpoint</span><span>: </span><span class="string-literal">jaeger:4317</span><span>
     </span><span class="attribute-name">tls</span><span>:
       </span><span class="attribute-name">insecure</span><span>: </span><span class="boolean-literal">true</span><span>
 
@@ -271,7 +273,7 @@
     </span><span class="attribute-name">traces</span><span>:
       </span><span class="attribute-name">receivers</span><span>: </span><span class="string-literal">[otlp]</span><span>
       </span><span class="attribute-name">processors</span><span>: </span><span class="string-literal">[batch]</span><span>
-      </span><span class="attribute-name">exporters</span><span>: </span><span class="string-literal">[jaeger]</span><span>
+      </span><span class="attribute-name">exporters</span><span>: </span><span class="string-literal">[otlp/jaeger]</span><span>
     </span><span class="attribute-name">metrics</span><span>:
       </span><span class="attribute-name">receivers</span><span>: </span><span class="string-literal">[otlp]</span><span>
       </span><span class="attribute-name">processors</span><span>: </span><span class="string-literal">[batch]</span><span>
